@@ -2,76 +2,115 @@ require 'rubygems'
 
 # Available list of platforms for targeting Gem installations.
 #
-module Gem::Platform
+class Gem::Platform
+
+  @local = nil
+
+  attr_accessor :cpu
+
+  attr_accessor :os
+
+  attr_accessor :version
 
   def self.local
-    @local ||= normalize Config::CONFIG['arch']
+    @local ||= new Config::CONFIG['arch']
   end
 
   def self.match(platform)
-    # This data is from http://gems.rubyforge.org/gems/yaml on 19 Aug 2007
-    platform = case platform
-               when /^i686-darwin(\d)/ then     ['x86',       'darwin',  $1]
-               when /^i\d86-linux/ then         ['x86',       'linux',   nil]
-               when 'java', 'jruby' then        [nil,         'java',    nil]
-               when /mswin32/ then              ['x86',       'mswin32', nil]
-               when 'powerpc-darwin' then       ['powerpc',   'darwin',  nil]
-               when /powerpc-darwin(\d)/ then   ['powerpc',   'darwin',  $1]
-               when /sparc-solaris2.8/ then     ['sparc',     'solaris', '2.8']
-               when /universal-darwin(\d)/ then ['universal', 'darwin',  $1]
-               else                             platform
-               end
-
     Gem.platforms.any? do |local_platform|
-      case platform
-      when Array then
-        cpu, os, ver = platform
-        lcpu, los, lver = local_platform
-
-        # cpu
-        (lcpu == 'universal' or cpu == 'universal' or lcpu == cpu) and
-
-        # os
-        los == os and
-
-        # ver
-        (lver.nil? or ver.nil? or lver == ver)
-      when nil then # ruby
-        true
-      else
-        local_platform == platform
-      end
+      platform.nil? or local_platform == platform or local_platform === platform
     end
   end
 
-  def self.normalize(arch)
-    cpu, os = arch.split '-', 2
-    cpu, os = nil, cpu if os.nil? # legacy jruby
+  def initialize(arch)
+    case arch
+    when Array then
+      @cpu, @os, @version = arch
+    when String then
+      cpu, os = arch.split '-', 2
+      cpu, os = nil, cpu if os.nil? # legacy jruby
 
-    cpu = case cpu
-          when /i\d86/ then 'x86'
-          else cpu
-          end
+      @cpu = case cpu
+             when /i\d86/ then 'x86'
+             else cpu
+             end
 
-    os = case os
-         when /aix(\d+)/ then             [ 'aix',       $1  ]
-         when /cygwin/ then               [ 'cygwin',    nil ]
-         when /darwin(\d+)?/ then         [ 'darwin',    $1  ]
-         when /freebsd(\d+)/ then         [ 'freebsd',   $1  ]
-         when /hpux(\d+)/ then            [ 'hpux',      $1  ]
-         when /^java$/ then               [ 'java',      nil ]
-         when /^java([\d.]*)/ then        [ 'java',      $1  ]
-         when /linux/ then                [ 'linux',     $1  ]
-         when /mingw32/ then              [ 'mingw32',   nil ]
-         when /mswin32/ then              [ 'mswin32',   nil ]
-         when /netbsdelf/ then            [ 'netbsdelf', nil ]
-         when /openbsd(\d+\.\d+)/ then    [ 'openbsd',   $1  ]
-         when /solaris(\d+\.\d+)/ then    [ 'solaris',   $1  ]
-         when /^(\w+_platform)(\d+)/ then [ $1,          $2  ] # for testing
-         else                             [ 'unknown',   nil ]
-         end
+      @os, @version = case os
+                      when /aix(\d+)/ then             [ 'aix',       $1  ]
+                      when /cygwin/ then               [ 'cygwin',    nil ]
+                      when /darwin(\d+)?/ then         [ 'darwin',    $1  ]
+                      when /freebsd(\d+)/ then         [ 'freebsd',   $1  ]
+                      when /hpux(\d+)/ then            [ 'hpux',      $1  ]
+                      when /^java$/ then               [ 'java',      nil ]
+                      when /^java([\d.]*)/ then        [ 'java',      $1  ]
+                      when /linux/ then                [ 'linux',     $1  ]
+                      when /mingw32/ then              [ 'mingw32',   nil ]
+                      when /mswin32/ then              [ 'mswin32',   nil ]
+                      when /netbsdelf/ then            [ 'netbsdelf', nil ]
+                      when /openbsd(\d+\.\d+)/ then    [ 'openbsd',   $1  ]
+                      when /solaris(\d+\.\d+)/ then    [ 'solaris',   $1  ]
+                      # test
+                      when /^(\w+_platform)(\d+)/ then [ $1,          $2  ]
+                      else                             [ 'unknown',   nil ]
+                      end
+    else
+      raise ArgumentError, "invalid argument #{arch.inspect}"
+    end
+  end
 
-    [cpu, os].flatten
+  def inspect
+    "#<%s:0x%x @cpu=%p, @os=%p, @version=%p>" % [self.class, object_id, *to_a]
+  end
+
+  def to_a
+    [@cpu, @os, @version]
+  end
+
+  def to_s
+    to_a.compact.join '-'
+  end
+
+  def ==(other)
+    self.class === other and
+      @cpu == other.cpu and @os == other.os and @version == other.version
+  end
+
+  def ===(other)
+    return nil unless Gem::Platform === other
+
+    # cpu
+    (@cpu == 'universal' or other.cpu == 'universal' or @cpu == other.cpu) and
+
+    # os
+    @os == other.os and
+
+    # version
+    (@version.nil? or other.version.nil? or @version == other.version)
+  end
+
+  def =~(other)
+    case other
+    when Gem::Platform then # nop
+    when String then
+      # This data is from http://gems.rubyforge.org/gems/yaml on 19 Aug 2007
+      other = case other
+              when /^i686-darwin(\d)/ then     ['x86',       'darwin',  $1]
+              when /^i\d86-linux/ then         ['x86',       'linux',   nil]
+              when 'java', 'jruby' then        [nil,         'java',    nil]
+              when /mswin32/ then              ['x86',       'mswin32', nil]
+              when 'powerpc-darwin' then       ['powerpc',   'darwin',  nil]
+              when /powerpc-darwin(\d)/ then   ['powerpc',   'darwin',  $1]
+              when /sparc-solaris2.8/ then     ['sparc',     'solaris', '2.8']
+              when /universal-darwin(\d)/ then ['universal', 'darwin',  $1]
+              else                             other
+              end
+
+      other = Gem::Platform.new other
+    else
+      return nil
+    end
+
+    self === other
   end
 
   ##
@@ -89,17 +128,17 @@ module Gem::Platform
   ##
   # A One Click Installer-compatible gem
 
-  MSWIN32 = normalize 'x86-mswin32'
+  MSWIN32 = new ['x86', 'mswin32', nil]
 
   ##
   # An x86 Linux-compatible gem
 
-  X86_LINUX = normalize 'x86-linux'
+  X86_LINUX = new ['x86', 'linux', nil]
 
   ##
   # A PowerPC Darwin-compatible gem
 
-  PPC_DARWIN = normalize 'powerpc-darwin'
+  PPC_DARWIN = new ['ppc', 'darwin', nil]
 
   # :stopdoc:
   # Here lie legacy constants.  These are deprecated.
